--- a/public/index.html
+++ b/public/index.html
@@ -8,14 +8,14 @@
     <!-- Linking Font Awesome for icons -->
     <link
       rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
     />
   </head>
   <body>
     <div class="container">
       <!-- Header -->
       <header class="header">
-        <div class="logo-warpper">
+        <div class="logo-wrapper">
           <div class="logo">
             <i class="fa-solid fa-wand-magic-sparkles"></i>
           </div>
@@ -47,10 +47,10 @@
           <!-- Prompt Actions/Buttons -->
 
           <div class="prompt-actions">
-            <div class="select-warpper">
-              <select class="custom-select" required>
+            <div class="select-wrapper">
+              <select class="custom-select" required id="model-select">
                 <option value="" selected disabled>Select Model</option>
-                <option value="black-forest-labs/FLUX.1-dev">FLUX.1-dev</option>
+                <option value="stabilityai/stable-diffusion-2">Stable Diffusion </option>
                 <option value="black-forest-labs/FLUX.1-schnell">
                   FLUX.1-schnell
                 </option>
@@ -65,7 +65,7 @@
             </div>
 
             <div class="select-wrapper">
-              <select class="custom-select" required>
+              <select class="custom-select" required id="count-select">
                 <option value="" selected disabled>Image Count</option>
                 <option value="1">1 Image</option>
                 <option value="2">2 Images</option>
@@ -75,7 +75,7 @@
             </div>
 
             <div class="select-wrapper">
-              <select class="custom-select" required>
+              <select class="custom-select" required id="ratio-select">
                 <option value="" selected disabled>Aspect Ratio</option>
                 <option value="1/1">Square (1:1)</option>
                 <option value="16/9">Landscape (16:9)</option>
@@ -84,12 +84,16 @@
             </div>
 
             <button type="submit" class="generate-btn">
-                <i class="fa-solid fa-wand-sparkles"></i>
-                Generate
+              <i class="fa-solid fa-wand-sparkles"></i>
+              Generate
             </button>
           </div>
+
+          <!-- Result Gallery Grid -->
+          <div class="gallery-grid"></div>
         </form>
       </div>
     </div>
+    <script src="script.js"></script>
   </body>
 </html>
